force-app/main/default/objects/ucinn_portal_Registration_Session__c/ucinn_portal_Registration_Session__c.object-meta.xml
<CustomObject>
    <label>Registration Session</label>
    <nameField>
        <label>Registration Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>