force-app/main/default/objects/ucinn_portal_Registration_Session__c/fields/Is_In_Payment_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Payment_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In Payment Page</label>
    <type>Checkbox</type>
</CustomField>