force-app/main/default/objects/ucinn_portal_Registration_Session__c/fields/Is_Valid_Session__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Session__c</fullName>
    <formula>OR(NOW() &lt; Expiration_Date_Time__c, ISPICKVAL(Status__c, &apos;Completed&apos;), ISPICKVAL(Status__c, &apos;Awaiting Gateway Confirmation&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid Session</label>
    <type>Checkbox</type>
</CustomField>