force-app/main/default/objects/ucinn_portal_Registration_Session__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>ucinn_portal_Receipt__c</referenceTo>
    <relationshipLabel>Registration Sessions</relationshipLabel>
    <relationshipName>ucinn_portal_Registration_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>