force-app/main/default/objects/ucinn_portal_Registration_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Shopping Cart</fullName>
                <default>true</default>
                <label>In Shopping Cart</label>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting Gateway Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>